Fixed-small-screen css left align problem

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -2665,14 +2665,7 @@ body {
   }
   .proj-ttle{
   }
-  .proj_ad{
-    display:inline-block;
-    list-style: none;
-    width: 100%;
-    height: 200px;
-    position:relative;
-    left:20%;
-  }
+
   .proj_text{
     margin:20px;
     width:100%;  
@@ -2760,6 +2753,7 @@ body {
 }
 
 @media (min-width: 768px) {
+
   .landing-page {
     .navbar-wrapper {
       margin-top: 20px;
@@ -2778,6 +2772,18 @@ body {
       font-size: 14px;
       line-height: 1.4;
     }
+    .proj_ad{
+      display:inline-block;
+      list-style: none;
+      width: 100%;
+      position:relative;
+      left:20%;
+    }
+  }
+  .blog_img{
+    position:relative;
+    left:20%;
+    width: 60%;
   }
 }
 
@@ -2859,16 +2865,27 @@ body {
         border: none;
       }
     }
+    .proj_ad{
+      display:inline-block;
+      list-style: none;
+      width: 100%;
+      position:relative;
+      left:2%;
+    }
+  }
+  .blog_img{
+    position:relative;
+    left:0%;
+    width: 50%;
   }
 }
 
 .blog_text{
-  display:block;
-  text-align:left;
-  width: 80%;
+  position:relative;
+  left:15%;
+  text-align:justify;
+  font-size: 11pt;
+  width: 70%;
 }
-.blog_img{
-  text-align: center;
-  width: 60%;
-}
+
 
